    not empty.
  . Fixed bug #55378: Binary number literal returns float number though its value
    is small enough. (Derick)
  . Fixed bug #52461 (Incomplete doctype and missing xmlns). 
    (virsacer at web dot de, Pierre)
  . Added support for SORT_NATURAL and SORT_FLAG_CASE in array sort functions:
    sort, rsort, ksort, krsort, asort, arsort and array_multisort. Req #55158 (arpad)

- Improved mbstring extension:
  . Added Shift_JIS/UTF-8 Emoji (pictograms) support. (Rui)
  . Added JIS X0213:2004 (Shift_JIS-2004, EUC-JP-2004, ISO-2022-JP-2004) support. (Rui)
  . Ill-formed UTF-8 check for security enhancements. (Rui)
  . Added MacJapanese (Shift_JIS) and gb18030 encoding support. (Rui)
  . Added encode/decode in hex format to mb_[en|de]code_numericentity(). (Rui)
  . Added user JIS X0213:2004 (Shift_JIS-2004, EUC-JP-2004, ISO-2022-JP-2004) support. (Rui)
  . Added the user user defined area for CP936 and CP950 (Rui).

- Improved NSAPI SAPI: (Uwe Schindler)
  . Don't set $_SERVER['HTTPS'] on unsecure connection (bug #55403).

- Improved Reflection extension:
  . Added ReflectionClass::newInstanceWithoutConstructor() to create a new
    instance of a class without invoking its constructor. FR #55490. (Sebastian)

- Improved JSON extension:
  . Added new json_encode() option JSON_UNESCAPED_UNICODE. FR #53946. (Irker, Gwynne)

04 Aug 2011, PHP 5.4.0 Alpha 3
- Added features:
 . Short array syntax, see UPGRADING guide for full details (rsky0711 at gmail 
   . com, sebastian.deutsch at 9elements . com, Pierre)
 . Binary numbers format (0b001010). (Jonah dot Harris at gmail dot com)
 . Support for Class::{expr}() syntax (Pierrick)

- Removed features:
  . Removed magic_quotes_gpc, magic_quotes_runtime and magic_quotes_sybase ini options.
    get_magic_quotes_gpc, get_magic_quotes_runtime are kept but always return
    false, set_magic_quotes_runtime raises an E_CORE_ERROR. (Pierrick, Pierre)

- Changed E_ALL to include E_STRICT. (Stas)

- Improved core functions